⚡️ Prevent layout shift when skip link is focused

--- a/_includes/components/_skip-to-content.css
+++ b/_includes/components/_skip-to-content.css
@@ -22,11 +22,12 @@
   overflow: visible;
   outline: 0.25em solid transparent;
   padding: 0.75em 1em 0.9em 1em;
-  position: static;
+  position: absolute;
   white-space: inherit;
   width: auto;
   background-color: var(--key-colour);
   color: var(--text-colour--inverse);
   text-decoration-color: var(--text-colour--inverse);
   text-decoration-thickness: 0.1em;
+  width: 100%;
 }
